--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.AnimaBuilder"
         tools:targetApi="31">
         <activity
+            android:name=".EquipmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PsychicActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MagicActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CombatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SecondaryAbilityActivity"
+            android:exported="false" />
+        <activity
             android:name=".CharacterPageActivity"
             android:exported="false" />
         <activity
