--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,25 +14,23 @@
         android:theme="@style/Theme.AnimaBuilder"
         tools:targetApi="31">
         <activity
-            android:name=".EquipmentActivity"
+            android:name=".Activities.HomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home"/>
+        <activity
+            android:name=".Activities.Fragments.PsychicFragment"
             android:exported="false" />
         <activity
-            android:name=".PsychicActivity"
+            android:name=".Activities.Fragments.MagicFragment"
             android:exported="false" />
         <activity
-            android:name=".MagicActivity"
+            android:name=".Activities.Fragments.CombatFragment"
             android:exported="false" />
         <activity
-            android:name=".CombatActivity"
+            android:name=".Activities.Fragments.SecondaryAbilityFragment"
             android:exported="false" />
         <activity
-            android:name=".SecondaryAbilityActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CharacterPageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
