Work on SecondaryInput
-indicate to user when development points are all spent on secondaries page
-begin conversion to Kotlin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,11 @@
         android:theme="@style/Theme.AnimaBuilder"
         tools:targetApi="31">
         <activity
+            android:name=".Test"
+            android:exported="false" />
+        <activity
             android:name=".Activities.HomeActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Activities.MainActivity"
             android:exported="true">
