--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,8 @@
         android:theme="@style/Theme.AnimaBuilder"
         tools:targetApi="31">
         <activity
-            android:name=".Test"
-            android:exported="false" />
-        <activity
             android:name=".activities.HomeActivity"
+            android:theme = "@style/Theme.AnimaBuilder.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
