--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
     composeOptions{
         kotlinCompilerExtensionVersion = "1.3.0"
     }
+    namespace 'com.example.animabuilder'
 }
 
 dependencies {
