--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,16 +39,16 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
 
-    implementation 'androidx.compose.animation:animation:1.2.1'
-    implementation 'androidx.compose.material:material:1.2.1'
-    implementation "androidx.compose.runtime:runtime:1.2.1"
-    implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
-    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.2.1'
+    implementation 'androidx.compose.animation:animation:1.3.3'
+    implementation 'androidx.compose.material:material:1.3.1'
+    implementation "androidx.compose.runtime:runtime:1.3.3"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
+    implementation 'androidx.compose.ui:ui-tooling:1.3.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
@@ -60,21 +60,22 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.5.1"
 
-    implementation "androidx.navigation:navigation-compose:2.5.2"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.2"
-    implementation 'androidx.navigation:navigation-fragment:2.5.2'
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
-    implementation 'androidx.navigation:navigation-ui:2.5.2'
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
-    androidTestImplementation "androidx.navigation:navigation-testing:2.5.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.3.3'
+    androidTestImplementation "androidx.navigation:navigation-testing:2.5.3"
 
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.2.1'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
 }
