--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
 
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'androidx.compose.animation:animation:1.3.3'
     implementation 'androidx.compose.material:material:1.3.1'
@@ -70,6 +70,7 @@ dependencies {
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:+'
     implementation 'androidx.core:core-ktx:+'
     implementation 'androidx.core:core-ktx:+'
 
