--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
+            android:theme = "@style/Theme.AnimaBuilder.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
