--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/anima_char_creator_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AnimaBuilder">
         <activity
             android:name=".activities.HomeActivity"
-            android:theme = "@style/Theme.AnimaBuilder.NoActionBar"
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
-            android:theme = "@style/Theme.AnimaBuilder.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
