--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,17 @@ android {
         applicationId "com.paetus.animaCharCreator"
         minSdk 21
         targetSdk 33
-        versionCode 9
-        versionName "1.0.2"
+        versionCode 11
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.debug
     }
 
     buildTypes {
+        debug {
+
+        }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -74,7 +77,6 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
     implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.core:core-ktx:1.10.1'
 
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
