--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         applicationId "com.paetus.animaCharCreator"
         minSdk 21
         targetSdk 33
-        versionCode 15
+        versionCode 16
         versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,6 +51,7 @@ dependencies {
 
     implementation 'androidx.compose.animation:animation:1.4.3'
     implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'androidx.compose.material3:material3:1.1.1'
     implementation "androidx.compose.runtime:runtime:1.4.3"
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
     implementation 'androidx.compose.ui:ui-tooling:1.4.3'
@@ -60,7 +61,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
 
-    implementation 'androidx.fragment:fragment-ktx:1.6.0'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
