--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     buildFeatures {
         viewBinding true
         compose true
+        buildConfig true
     }
 
     composeOptions{
@@ -51,7 +52,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.activity:activity-compose:1.8.1'
+    implementation 'androidx.activity:activity-compose:1.8.2'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
 
@@ -75,13 +76,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.2"
 
-    implementation "androidx.navigation:navigation-compose:2.7.5"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.5"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.7.5"
-    implementation "androidx.navigation:navigation-ui-ktx:2.7.5"
+    implementation "androidx.navigation:navigation-compose:2.7.6"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.6"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.7.6"
+    implementation "androidx.navigation:navigation-ui-ktx:2.7.6"
 
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx:21.5.0'
@@ -92,7 +93,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.4'
-    androidTestImplementation "androidx.navigation:navigation-testing:2.7.5"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.7.6"
 
     debugImplementation 'androidx.compose.ui:ui-tooling:1.5.4'
 }
