--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdk 21
         targetSdk 34
 
-        versionCode 39
+        versionCode 41
 
         versionName "1.0.9"
 
@@ -71,11 +71,11 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.8.1'
 
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.2"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.2"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.2"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.2'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.8.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.3"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.3"
 
     implementation "androidx.navigation:navigation-compose:2.7.7"
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.7"
@@ -84,6 +84,8 @@ dependencies {
 
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
     implementation 'com.google.android.material:material:1.12.0'
+    implementation "com.google.android.play:feature-delivery:2.1.0"
+    implementation "com.google.android.play:feature-delivery-ktx:2.1.0"
 
     implementation platform('com.google.firebase:firebase-bom:33.1.1')
     implementation 'com.google.firebase:firebase-analytics-ktx:22.0.2'
