--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.4.2'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:3.0.2'
-        classpath 'com.google.firebase:perf-plugin:1.4.2'
+        classpath libs.google.services
+        classpath libs.firebase.crashlytics.gradle
+        classpath libs.perf.plugin
     }
 }
 
 plugins {
 
-    id 'com.android.application' version '8.5.0' apply false
-    id 'com.android.library' version '8.5.0' apply false
+    id 'com.android.application' version '8.9.0' apply false
+    id 'com.android.library' version '8.9.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.1.10' apply false
 
-    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    alias(libs.plugins.compose.compiler) apply false
 }
 
 allprojects {
